--- a/index.html
+++ b/index.html
@@ -1,106 +1,117 @@
 <!DOCTYPE html>
 <html lang="en-mx">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WOODIES</title>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <header class="header">
-        <div class="header-top">
-            <div class="containe">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="logo">
-                            <img src="img/logo.jpg" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <nav class="navbar navbar-expand-lg navbar-light">
-                            <div class="container-fluid">
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                      <a class="nav-link" aria-current="page" href="#">About Us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="#">How it works</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="#">Categories</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="#">Testimony</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link btn btn-outline-secondary" aria-current="page" href="#">SING UP</a>
-                                    </li>
-                                </ul>    
-                            </div>
-                        </nav>
-                    </div>
-                </div>
+      <div class="header-top">
+        <div class="containe">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="logo">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
-        </div>
-        <div class="header-bottom">
-            <div class="container header-container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h2>Are you looking for woodden furniture for your place?</h2>
-                        <h1>This is the Right Place</h1>
-                        <a href="" class="btn btn-warning">Explore Furniture</a>
-                    </div>
+            <div class="col-sm-8">
+              <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">How it works</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">Categories</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">Testimony</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link btn btn-outline-secondary" aria-current="page" href="#"
+                        >SING UP</a
+                      >
+                    </li>
+                  </ul>
                 </div>
+              </nav>
             </div>
-            <div class="header-table"></div>
+          </div>
         </div>
+      </div>
+      <div class="header-bottom">
+        <div class="container header-container">
+          <div class="row">
+            <div class="col-sm-6">
+              <h2>Are you looking for woodden furniture for your place?</h2>
+              <h1>This is the Right Place</h1>
+              <a href="" class="btn btn-warning">Explore Furniture</a>
+            </div>
+          </div>
+        </div>
+        <div class="header-table"></div>
+      </div>
     </header>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-1">
-                <img src="img/logito.jpg" width="30" height="30">
-            </div>
-            <div class="col-sm-2">
-                <h3><strong>Who we are</strong></h3>
-            </div>
-            <div class="col-sm-5">
-                <hr>
-            </div>
-            <div class="col-sm-3">
-                <h1><strong>ABOUT US</strong></h1>
-            </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <h3 class="header-with-logo"><strong>Who we are</strong></h3>
         </div>
+        <div class="col-sm-6">
+          <hr />
+        </div>
+        <div class="col-sm-3">
+          <h1 class="text-end"><strong>ABOUT US</strong></h1>
+        </div>
+      </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <br />
     <div class="container funiture">
-        <div class="row">
-            <div class="col-sm-6">
-                <img src="img/funiture.jpg" width="426" height="388" class="img-fluid" alt="">
-            </div>
-            <div class="col-sm-6 funiture-text-center">
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <h3><strong>WOODIES</strong> is the <strong>home of modern wooden furniture</strong></h3>
-                <p>the answer to your need for furniture with shapes, sizes and colors. </p>
-            </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="img/funiture.jpg" width="426" height="388" class="img-fluid" alt="" />
         </div>
+        <div class="col-sm-6 funiture-text-center">
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <h3><strong>WOODIES</strong> is the <strong>home of modern wooden furniture</strong></h3>
+          <p>the answer to your need for furniture with shapes, sizes and colors. </p>
+        </div>
+      </div>
     </div>
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
